--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Image Gallery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type= "text/css" href="js/lightbox/css/lightbox.min.css">
+  <link rel="stylesheet" type= "text/css" href="js/lightbox/css/lightbox.css">
   <link rel="stylesheet" type= "text/css" href="css/styles.css">
 </head>
 
