--- a/index.html
+++ b/index.html
@@ -20,54 +20,54 @@
   <ul class="row" id = "image-list">
     <li class="image-items">
       <a href="images/01.jpg" data-lightbox = "my-gallery" data-title = "I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
-      <img src = "images/thumbnails/01.jpg" class="col" alt="Hay Bales"></a>
+      <img src = "images/thumbnails/01.jpg" class="col image" alt="Hay Bales"></a>
     </li>
     <li class="image-items"> 
       <a href="images/02.jpg" data-lightbox = "my-gallery" data-title = "The lake was so calm today. We had a great view of the snow on the mountains from here.">
-      <img src = "images/thumbnails/02.jpg" class="col" alt="Lake is calm"></a>
+      <img src = "images/thumbnails/02.jpg" class="col image" alt="Lake is calm"></a>
     </li> 
     <li class="image-items">  
       <a href="images/03.jpg" data-lightbox = "my-gallery" data-title = "Canyon - I hiked to the top of the mountain and got this picture of the canyon and trees below.">
-      <img src = "images/thumbnails/03.jpg" class="col" alt="Canyon"></a>
+      <img src = "images/thumbnails/03.jpg" class="col image" alt="Canyon"></a>
     </li> 
     <li class="image-items">
       <a href="images/04.jpg" data-lightbox = "my-gallery" data-title = "Iceberg - It was amazing to see an iceberg up close, it was so cold but didn’t snow today.">
-      <img src = "images/thumbnails/04.jpg" class="col" alt="Iceberg"></a>
+      <img src = "images/thumbnails/04.jpg" class="col image" alt="Iceberg"></a>
     </li>
 
 
     <li class="image-items">
       <a href="images/05.jpg" data-lightbox = "my-gallery" data-title = "Desert - The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
-      <img src = "images/thumbnails/05.jpg" class="col" alt="Desert"></a>
+      <img src = "images/thumbnails/05.jpg" class="col image" alt="Desert"></a>
     </li>
     <li class="image-items">    
       <a href="images/06.jpg" data-lightbox = "my-gallery" data-title = "Fall is coming, I love when the leaves on the trees start to change color.">
-      <img src = "images/thumbnails/06.jpg" class="col" alt="Fall"></a>
+      <img src = "images/thumbnails/06.jpg" class="col image" alt="Fall"></a>
     </li>
     <li class="image-items">      
       <a href="images/07.jpg" data-lightbox = "my-gallery" data-title = "Plantation - I drove past this plantation yesterday, everything is so green!">
-      <img src = "images/thumbnails/07.jpg" class="col" alt="Plantation"></a>
+      <img src = "images/thumbnails/07.jpg" class="col image" alt="Plantation"></a>
     </li>
     <li class="image-items">
       <a href="images/08.jpg" data-lightbox = "my-gallery" data-title = "Dunes - My summer vacation to the Oregon Coast. I love the sandy dunes!">
-      <img src = "images/thumbnails/08.jpg" class="col" alt="Dunes"></a>  
+      <img src = "images/thumbnails/08.jpg" class="col image" alt="Dunes"></a>  
     </li>
 
     <li class="image-items"> 
       <a href="images/09.jpg" data-lightbox = "my-gallery" data-title = "Countryside Lane - We enjoyed a quiet stroll down this countryside lane. .">
-      <img src = "images/thumbnails/09.jpg" class="col" alt="Countryside Lane"></a>
+      <img src = "images/thumbnails/09.jpg" class="col image" alt="Countryside Lane"></a>
     </li>
     <li class="image-items">   
       <a href="images/10.jpg" data-lightbox = "my-gallery" data-title = "Sunset - Sunset at the coast! The sky turned a lovely shade of orange.">
-      <img src = "images/thumbnails/10.jpg" class="col" alt="Sunset"></a>
+      <img src = "images/thumbnails/10.jpg" class="col image" alt="Sunset"></a>
     </li>
     <li class="image-items">     
       <a href="images/11.jpg" data-lightbox = "my-gallery" data-title = "Cave - I did a tour of a cave today and the view of the landscape below was breathtaking.">
-      <img src = "images/thumbnails/11.jpg" class="col" alt="Cave"></a>
+      <img src = "images/thumbnails/11.jpg" class="col image" alt="Cave"></a>
     </li>
     <li class="image-items">      
       <a href="images/12.jpg" data-lightbox = "my-gallery" data-title = "Bluebells - I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
-      <img src = "images/thumbnails/12.jpg" class="col" alt="Bluebells"></a>
+      <img src = "images/thumbnails/12.jpg" class="col image" alt="Bluebells"></a>
     </li>    
       
   </ul>
